--- a/style.css
+++ b/style.css
@@ -5,22 +5,22 @@ html{
     --blue: #1e90ff;
     --white: #ffffff;
   }  
+  body{
+    background-color: black;
+  }
 *{
     margin: 0%;
     padding: 0%;
     box-sizing: border-box;
-}
-.container{
-    width: 100vw;
-    height: 100vh;
+    font-family: 'Uchen', serif;
 }
 .navbar{
- width: 100%;
-    color: var(--blue);
-    background-color: var(--blue);
-    font-size: 2rem;
+ max-width: 100vw;
+color: white;
+background-color: #44559D;
+ font-size: 2rem;
 display: flex;
-justify-content: center;
+justify-content: flex-end;
 align-items: flex-end;
 min-height: 5rem;
 
@@ -29,12 +29,17 @@ min-height: 5rem;
     list-style-type: none;
 }
 .navbar  > ul > li > a{
-    color: black;
+   color: white;
     text-decoration: none;
+}
+.navbar  > ul > li > a:hover{
+    color: black;
 }
 .navbar > ul{
     display: flex;
 justify-content: space-between;
+position: absolute;
+top: 2%;
 
 }
 .navbar > ul > li{
@@ -43,9 +48,9 @@ justify-content: space-between;
 }
 #logo a{
     position: absolute;
-    top: 2.1%;
+    top: 2%;
     left: 0%;
-    font-size: 3rem;
+    font-size: 2rem;
 text-decoration: none;
 color: black;
 display: flex;
@@ -53,10 +58,12 @@ align-items: flex-end;
 }
 
 .body{
-    background-color: royalblue;
+    background-color:#F1F0EB;
 }
-
-@media screen  and (max-width:990px) {
+#pp{
+  display: none;
+}
+/* @media screen  and (max-width:990px) {
 
     .navbar > ul{
         position: relative;
@@ -66,30 +73,43 @@ align-items: flex-end;
 
 }
 
-@media screen  and (max-width:643px) {
+@media screen  and (max-width:670px) {
+
+
 
     .navbar > ul  {
-position: relative;
-right: 15px;
-font-size: 1.8rem;
+font-size: 1.7rem;
     } 
-    
+    .navbar > ul > li{
+        width: 62px;
+      
+      } 
 
 
-}
+}*/
 
 
 
 
-@media screen  and (max-width:625px) {
+ @media screen  and (max-width:640px) {
 
     .navbar > ul > li{
         display: none;
-    } 
-    
+    }
+    #pp{
+      display: block;
+    }
+    #logo a{
+        font-size: 2.6rem;;
+    }
+    .persnolity{
+        max-width: 600px;
+     
+    }
+
+  }
 
 
-}
 .body{
     display: flex;
     flex-direction: column;
@@ -98,12 +118,25 @@ align-items: center;
 }
 .persnolity{
     margin-top: 10px;
-    border: 1px solid black;
-    max-width: 50vw;
+    max-width: 300px;
     display: flex;
     flex-direction: column;
     align-items: center;
     font-size: 2rem;
+    border: 1px solid black;
+ 
+}
+.persnolity:nth-child(1):hover{
+  transform: none;
+}
+.persnolity:nth-child(3){
+margin-bottom: 5px;
+}
+.persnolity:hover{
+  background-color: #F0C993;
+  border: 2px solid black;
+transform: scale(1.001);
+border-radius: 5px;
  
 }
 .persnolity > img{
@@ -115,7 +148,9 @@ height: 400px;
     background-color: cornflowerblue;
     color: black;
     display: flex;
-
+justify-content: flex-end;
+font-size:1.5rem;
+height: max-content;
 }
 .footer> ul > li > a{
 text-decoration: none;
@@ -124,4 +159,242 @@ font-size: 1.5rem;
 }
 .footer  ul > li {
 list-style-type: none;
+}
+.site-footer
+{
+  background-color:#26272b;
+  padding:45px 0 20px;
+  font-size:15px;
+  line-height:24px;
+  color:#737373;
+}
+.site-footer hr
+{
+  border-top-color:#bbb;
+  opacity:0.5
+}
+.site-footer hr.small
+{
+  margin:20px 0
+}
+.site-footer h6
+{
+  color:#fff;
+  font-size:16px;
+  text-transform:uppercase;
+  margin-top:5px;
+  letter-spacing:2px
+}
+.site-footer a
+{
+  color:#737373;
+}
+.site-footer a:hover
+{
+  color:#3366cc;
+  text-decoration:none;
+}
+.footer-links
+{
+  padding-left:0;
+  list-style:none
+}
+.footer-links li
+{
+  display:block
+}
+.footer-links a
+{
+  color:#737373
+}
+.footer-links a:active,.footer-links a:focus,.footer-links a:hover
+{
+  color:#3366cc;
+  text-decoration:none;
+}
+.footer-links.inline li
+{
+  display:inline-block
+}
+.site-footer .social-icons
+{
+  text-align:right
+}
+.site-footer .social-icons a
+{
+  width:40px;
+  height:40px;
+  line-height:40px;
+  margin-left:6px;
+  margin-right:0;
+  border-radius:100%;
+  background-color:#33353d
+}
+.copyright-text
+{
+  margin:0
+}
+@media (max-width:991px)
+{
+  .site-footer [class^=col-]
+  {
+    margin-bottom:30px
+  }
+}
+@media (max-width:767px)
+{
+  .site-footer
+  {
+    padding-bottom:0
+  }
+  .site-footer .copyright-text,.site-footer .social-icons
+  {
+    text-align:center
+  }
+}
+.social-icons
+{
+  padding-left:0;
+  margin-bottom:0;
+  list-style:none
+}
+.social-icons li
+{
+  display:inline-block;
+  margin-bottom:4px
+}
+.social-icons li.title
+{
+  margin-right:15px;
+  text-transform:uppercase;
+  color:#96a2b2;
+  font-weight:700;
+  font-size:13px
+}
+.social-icons a{
+  background-color:#eceeef;
+  color:#818a91;
+  font-size:16px;
+  display:inline-block;
+  line-height:44px;
+  width:44px;
+  height:44px;
+  text-align:center;
+  margin-right:8px;
+  border-radius:100%;
+  -webkit-transition:all .2s linear;
+  -o-transition:all .2s linear;
+  transition:all .2s linear
+}
+.social-icons a:active,.social-icons a:focus,.social-icons a:hover
+{
+  color:#fff;
+  background-color:#29aafe
+}
+.social-icons.size-sm a
+{
+  line-height:34px;
+  height:34px;
+  width:34px;
+  font-size:14px
+}
+.social-icons a.facebook:hover
+{
+  background-color:#3b5998
+}
+.social-icons a.twitter:hover
+{
+  background-color:#00aced
+}
+.social-icons a.linkedin:hover
+{
+  background-color:#007bb6
+}
+.social-icons a.dribbble:hover
+{
+  background-color:#ea4c89
+}
+@media (max-width:767px)
+{
+  .social-icons li.title
+  {
+    display:block;
+    margin-right:0;
+    font-weight:600
+  }
+}
+.footer-links{
+    display: flex;
+}
+.footer-links > li {
+    width: 85px;
+}
+.social-icons{
+    display: flex;
+    justify-content: center;
+}
+.footer-links > li > a{
+    text-decoration: none;
+}
+#bb{
+    text-decoration: none;
+}
+.container1{
+    height: 170px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+.copyright-text{
+    padding-bottom: 20px;
+}
+.fa-bars{
+  color: black;
+  position: relative;
+  right: 7px;
+  top: 7px;
+}
+.sidebar{
+  display: none;
+}
+
+.sidebar > ul{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  list-style-type: none;
+  align-items: center;
+}
+.sidebar > ul > li{
+  border-bottom: 2px solid black;
+}
+.sidebar > ul > li > a{
+ color: white;
+ text-decoration: none;
+}
+.sidebar > ul > li > a:hover{
+ color: black;
+ text-decoration: underline;
+}
+.sidebar{
+  line-height: 70px;
+  position: absolute;
+  top: 4%;
+  right: 0%;
+  color: black;
+  border: 2px solid black;
+  background-color:  #44559D;;
+  width: 200px;
+  height: 400px;
+  font-size: 2rem;
+  list-style-type: none;
+}
+.kk{
+  position: absolute;
+  right:  5px;
+  top: 0%;
+  bottom: 10px;
+  font-size: 20px;
+  display: block;
 }
